--- a/menu_management/templates/tags_html/menu.html
+++ b/menu_management/templates/tags_html/menu.html
@@ -1,49 +1,14 @@
-{#<ul class="nav nav-list">#}
-{#    <li class="active">#}
-{#        <a href="/index/">#}
-{#            <i class="menu-icon fa fa-tachometer"></i>#}
-{#            <span class="menu-text"> 后台首页 </span>#}
-{#        </a>#}
-{##}
-{#        <b class="arrow"></b>#}
-{#        {% for first in first_menu %}#}
-{#            <li class="">#}
-{#                <a href="#" class="dropdown-toggle">#}
-{#                    <i class="{{ first.ico }}"></i>#}
-{#                    <span class="menu-text"> {{ first.title }} </span>#}
-{##}
-{#                    <b class="arrow fa fa-angle-down"></b>#}
-{#                </a>#}
-{##}
-{#                <b class="arrow"></b>#}
-{##}
-{#                <ul class="submenu">#}
-{#                    {% for second in first.second_menu_set.all %}#}
-{#                        <li class="">#}
-{#                            <a href="{{ second.url }}">#}
-{#                                <i class="{{ second.ico }}"></i>#}
-{#                                {{ second.title }}#}
-{#                            </a>#}
-{#                            <b class="arrow"></b>#}
-{#                        </li>#}
-{#                    {% endfor %}#}
-{#                </ul>#}
-{#            </li>#}
-{#        {% endfor %}#}
-{#</ul><!-- /.nav-list -->#}
-
-
 <nav class="navbar-default navbar-side" role="navigation">
     <!--<div id="sideNav" href=""><i class="fa fa-caret-right"></i></div>-->
     <div class="sidebar-collapse">
         <ul class="nav" id="main-menu">
 
             <li>
-                <a class="active-menu" href="/index/"><i class="fa fa-dashboard"></i> 后台首页 </a>
+                <a class="active-menu" href="/index/"><i class="fa fa-dashboard"></i> <b>后台首页</b></a>
             </li>
             {% for first in first_menu %}
-                <li>
-                    <a href="#"><i class="fa fa-sitemap"></i> {{ first.title }}<span class="fa arrow"></span></a>
+                <li id="li{{ first.nid }}">
+                    <a href="#"><i class="fa fa-sitemap"></i><b>{{ first.title }}</b> <span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         {% for second in first.second_menu_set.all %}
                             <li>
