--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-Hans">
 
 <head>
     <meta charset="utf-8"/>
