--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,12 @@
         </div>
 
         <ul class="nav navbar-top-links navbar-right">
+            <li >
+                <a href="/xadmin/">
+                <i class="fa fa-cogs"></i>
+                    <span>管理员入口</span>
+                </a>
+            </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
                     <i class="fa fa-envelope fa-fw"></i> <i class="fa fa-caret-down"></i>
