基本数据操作

--- a/templates/user_management_html/add_user.html
+++ b/templates/user_management_html/add_user.html
@@ -1,4 +1,4 @@
-{% extends "user_info.html" %}
+{% extends "base.html" %}
 {% block content %}
     <div align="center">
          <p class="btn btn-default" style="width: 120px;height: 30px">增 &nbsp加&nbsp用&nbsp户</p>
