--- a/templates/xadmin/xadmin_index.html
+++ b/templates/xadmin/xadmin_index.html
@@ -14,7 +14,7 @@
         <br/>
         <br/>
         <div class="col-md-offset-1">
-            <form class="form-inline">
+            <form class="form-inline" method="post">
                 {% csrf_token %}
                 <div class="form-group">
                     <input type="text" class="form-control" id="keyword" style="width: 300px;"
