--- a/templates/user_management_html/search_user.html
+++ b/templates/user_management_html/search_user.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <script src="/static/js/jquery-3.3.1.min.js"></script>
     <div align="center">
 
     </div>
@@ -11,26 +12,26 @@
 
             <button type="button" class="btn btn-primary">系 &nbsp统&nbsp用&nbsp户&nbsp查&nbsp询&nbsp处</button>
             <!-- 查询start-->
-            <div  class="col-md-offset-7">
-            <form  action=" /user_management/user_search/" method="post" class="form-inline">
-                  {% csrf_token %}
-            <div class="form-group">
-                <input type="text" class="form-control" name="search_key" id="value" placeholder="在此输入查询"/>
+            <div class="col-md-offset-7">
+                <form action=" /user_management/user_search/" method="post" class="form-inline">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="search_key" id="value" placeholder="在此输入查询"/>
 
-            </div>
+                    </div>
 
-            <div class="form-group">
-                <select class="form-control" id="key" name="choice_title">
-                    <option value="用户姓名">用户姓名</option>
-                    <option value="用户住址">用户住址</option>
-                    <option value="用户编号">用户编号</option>
-                    <option value="用户年龄">用户年龄</option>
-                    <option value="用户年限">用户年限</option>
-                </select>
-            </div>
-            <button type="submit" id="select_user" class="btn btn-info" style="width: 100px;">查询</button>
+                    <div class="form-group">
+                        <select class="form-control" id="key" name="choice_title">
+                            <option value="用户姓名">用户姓名</option>
+                            <option value="用户住址">用户住址</option>
+                            <option value="用户编号">用户编号</option>
+                            <option value="用户年龄">用户年龄</option>
+                            <option value="用户年限">用户年限</option>
+                        </select>
+                    </div>
+                    <button type="submit" id="select_user" class="btn btn-info" style="width: 100px;">查询</button>
 
-           </form>
+                </form>
             </div>
             <!-- 查询end-->
             <!-- form 多选-->
@@ -76,9 +77,9 @@
                         <td style="width: 80px">{{ user.user_name }}</td>
 
                         <td style="width: 80px">
-                            {% for role in role_list %}
-                                <span style="font-size: 2px "> {{ role.title }}:</span>
-                            {% endfor %}
+                                {% for role in   user.user.role_set.all %}
+                                {{ role.title }}
+                                {% endfor %}
                         </td>
                         <td style="width: 50px">{{ user.user_age }}</td>
 
@@ -258,7 +259,7 @@
 
                                         <div class="modal-header">
                                             <button type="button" class="close" data-dismiss="modal"
-                                                    aria-label="Close"><span aria-hidden="true"></span>
+                                                    aria-label="Close"><span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
 
@@ -448,143 +449,7 @@
 
         <div>
 
-            <!-- 新增员工 -->
-            <a class="btn btn-xs btn-success" title="增加员工" data-toggle="modal"
-               data-target="#addmyModal">
-                <i class="btn btn-mini btn-success" style="width: 70px;height: 25px">新增员工</i>
-            </a>
 
-
-            <div class="modal fade" id="addmyModal" tabindex="-1" role="dialog"
-                 aria-labelledby="myModalLabel">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <!-- 新增员工-->
-                            <div align="center">
-                                <p class="btn btn-default" style="width: 150px;height: 40px">增
-                                    &nbsp加&nbsp用&nbsp户 &nbsp信&nbsp 息</p>
-                            </div>
-
-                            <div class="col-md-offset-1">
-                                <hr/>
-                                <form action="/user_management/add_user/" method="post" class="form-horizontal">
-                                    {% csrf_token %}
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">请选择用户：</label>
-                                        <div class="col-sm-5">
-                                            <!-- 选择是根据name=“” 传递给后台的字段 里面的 取值是是value的值-->
-                                            <select name="user_id" id="titlelist" style="width: 200px">
-                                                {% for user in  userlists %}
-
-                                                    <option value="{{ user.pk }}"> {{ user.username }}</option>
-
-                                                {% endfor %}
-
-
-                                            </select>
-
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">姓名：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_name" name="user_name"
-                                                   placeholder="在这里输入姓名">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">身份证号：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_id_card"
-                                                   name="user_id_card" placeholder="请在这里输入身份证号">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">年限：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_stay_years"
-                                                   name="user_stay_years"
-                                                   placeholder="请在这里输入年限">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">性别：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_gender"
-                                                   name="user_gender"
-                                                   placeholder="请在这里输入性别">
-                                        </div>
-                                    </div>
-
-
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">手机号：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_phone"
-                                                   name="user_phone" placeholder="请在这里输入手机号">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">年龄：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_age"
-                                                   name="user_age" placeholder="请在这里输入年龄">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="username" class="col-sm-2 control-label">备注：</label>
-                                        <div class="col-sm-5">
-                                            <input type="text" class="form-control" id="user_remarks"
-                                                   name="user_remarks" placeholder="请在这里输入备注信息">
-                                        </div>
-                                    </div>
-
-
-                                    <div class="form-group">
-                                        <label for="title" class="col-sm-2 control-label">角色：</label>
-                                        <div class="col-sm-5">
-
-
-                                            <select name="titlelist" id="titlelist" multiple>
-                                                {% for role in roles_list %}
-                                                    <option value="{{ role.pk }}">{{ role.title }}</option>
-
-                                                {% endfor %}
-
-                                            </select>
-
-                                        </div>
-                                    </div>
-
-                                    <br/>
-
-                                    {#                                    </form>#}
-
-
-                                    <!--新增员工 -->
-
-                                    <!-- 对于模态框的使用一些按钮是无法乱改的 保存就是保存  取消就是取消 data-dismiss="modal"  就是取消   不用就删除掉再改 -->
-                                    <div class="modal-footer">
-
-                                        <a href="/user_management/user_info/"
-                                           class="btn btn-danger">取消</a>
-                                        <button type="submit" class="btn btn-default">
-                                            保存
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 新增员工 -->
             <!-- 小功能下-->
             <a class="btn btn-xs btn-info" title="发送站内信" onclick="sendFhsms('lisi');">
                 <i class="ace-icon fa fa-envelope-o bigger-120" title="发送站内信" style="height: 20px"></i>
